--- a/welcome.html
+++ b/welcome.html
@@ -33,14 +33,31 @@
             return md5_hash
     	}
 
+    	function validateInput(inp, message)
+        {
+        	if (message == null)
+        	    message = "input required!";
+            if (inp==null || inp=="")
+            {
+                alert(message);
+                return false;
+            }
+            return true;
+        }
+
         function login()
         {
             var usr = document.getElementById("usr").value;
-            var pwd = encrypt(document.getElementById("pwd").value);
+            if (validateInput(usr, "usrname required!") == false)
+            	return;
+            var pwd = document.getElementById("pwd").value;
+            if (validateInput(pwd, "password required!") == false)
+            	return;
+
             var params = {
                 'visitor': 0,
                 "id": usr,
-                "pwd": pwd
+                "pwd": encrypt(pwd)
             }
 
             // todo: this url is only for test. when actually used, it should 
@@ -58,10 +75,15 @@
         function signup()
         {
             var usr = document.getElementById("usr").value;
-            var pwd = encrypt(document.getElementById("pwd").value);
+            if (validateInput(usr, "usrname required!") == false)
+            	return;
+            var pwd = document.getElementById("pwd").value;
+            if (validateInput(pwd, "password required!") == false)
+            	return;
+
             var params = {
                 "id": usr,
-                "pwd": pwd
+                "pwd": encrypt(pwd)
             }
 
             // todo: this url is only for test. when actually used, it should 
@@ -103,8 +125,8 @@
     <img id="logo" src="img/logo.png">
 
     <div class="form" style="position: relative">
-        <input id="usr" type="text" name="username" placeholder="username">
-        <input id="pwd" type="password" name="password" placeholder="password">
+        <input id="usr" type="text" name="username" placeholder="username" required="usrname required">
+        <input id="pwd" type="password" name="password" placeholder="password" required="password required">
 
         <button class="button button-glow button-border button-rounded button-primary" type="button" onclick="javascript:login()"> Log in </button>
 
