--- a/welcome.html
+++ b/welcome.html
@@ -125,8 +125,8 @@
     <img id="logo" src="img/logo.png">
 
     <div class="form" style="position: relative">
-        <input id="usr" type="text" name="username" placeholder="username" required="usrname required">
-        <input id="pwd" type="password" name="password" placeholder="password" required="password required">
+        <input id="usr" type="text" name="username" placeholder="username">
+        <input id="pwd" type="password" name="password" placeholder="password">
 
         <button class="button button-glow button-border button-rounded button-primary" type="button" onclick="javascript:login()"> Log in </button>
 
