modify index.html in features and icons

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
         <div class="container">
           	<h1>Hello, Anonym!</h1>
           	<p>This is an anonymous forum designed by PKU students.</p>
-          	<p><a href="about.html" class="button button-glow button-rounded button-raised button-primary">Learn more &raquo;</a></p>
+          	<p><a href="https://github.com/twni2016/Anonymous-Forum" class="button button-glow button-rounded button-raised button-primary">Source Code &raquo;</a></p>
         </div>
     </div>
 	<div id='main'>
