--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         	<div id="navbar" class="navbar-collapse collapse">
             	<ul class="nav navbar-nav navbar-right">
 					<li><a href="user.html" class="btn btn-success btn-lg active" id="personal" role="button">Personal Info &raquo;</a></li>
-					<!-- href = "user.html?uid=xxx" -->
+					<li><a href="index.html" class="btn btn-danger btn-lg active" id="logout" role="button">Log Out &raquo;</a></li>
             	</ul> 
             <!-- <form class="navbar-form navbar-right">
               <div class="form-group">
